--- a/TestApplication/app/src/main/res/layout/postdatalayout.xml
+++ b/TestApplication/app/src/main/res/layout/postdatalayout.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:singleLine="true"
+            android:hint="Enter Title"
             android:textColor="@color/black"
             android:maxLength="50"
             android:padding="5dp"
@@ -42,6 +43,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:textColor="@color/black"
+            android:hint="Enter Description"
             android:singleLine="true"
             android:maxLength="50"
             android:padding="5dp"
